# SpuBase

./: .gitignore  Lunar_Surfaces.py  README.md  SpuBase.py  environment.yml  pyproject.toml  requirements.txt  setup.py
SpuBase/: SpuBase.py  data_access.py
SpuBase/docs/: 0_Mineral_fractions.ipynb  1_Lunar_Surfaces.ipynb  1_Surface_compositions.ipynb
SpuBase/tables/: minerals_atoms.txt  rho_minerals.txt
data/sbbx/: H_Abd_sbbx_part_info.txt  H_An_sbbx_part_info.txt  H_Chr_sbbx_part_info.txt  H_Dbr_sbbx_part_info.txt  H_En_sbbx_part_info.txt  H_Fs_sbbx_part_info.txt  H_Qz_sbbx_part_info.txt  H_Sp_sbbx_part_info.txt  H_Wo_sbbx_part_info.txt  He_Abd_sbbx_part_info.txt  He_An_sbbx_part_info.txt  He_Bzn_sbbx_part_info.txt  He_Chr_sbbx_part_info.txt  He_Dbr_sbbx_part_info.txt  He_Di_sbbx_part_info.txt  He_En_sbbx_part_info.txt  He_Fa_sbbx_part_info.txt  He_Fs_sbbx_part_info.txt  He_Ilm_sbbx_part_info.txt  He_Nph_sbbx_part_info.txt  He_Old_sbbx_part_info.txt  He_Qz_sbbx_part_info.txt  He_Sp_sbbx_part_info.txt  He_Tro_sbbx_part_info.txt  He_Wo_sbbx_part_info.txt  SW_Ab_sbbx_part_info.txt  SW_Abd_sbbx_part_info.txt  SW_An_sbbx_part_info.txt  SW_Bzn_sbbx_part_info.txt  SW_Chr_sbbx_part_info.txt  SW_Dbr_sbbx_part_info.txt  SW_Fa_sbbx_part_info.txt  SW_Fs_sbbx_part_info.txt  SW_Ilm_sbbx_part_info.txt  SW_Old_sbbx_part_info.txt  SW_Or_sbbx_part_info.txt  SW_Sp_sbbx_part_info.txt  SW_Was_sbbx_part_info.txt
data/sbbxd/: SW_Abd_sbbxd_part_info.txt  (+4 more)
docs/: 0_Mineral.ipynb
spubase/: data_access.py
tables/: amu_elements.txt  species_dict.txt  table1.txt  table_compound
(+66 files in other folders)
