[tool.poetry]
name = "SpuBase"
version = "0.1.0"
description = "Accesses ion sputter data and returns the angular distribution, energy distribution, speciation and quantity of ejecta."
authors = ["Noah Jäggi <nvjaeggi@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.12"
scipy = "^1.10.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
seaborn = "0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"